--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
